fixed bug in navbar causing alignment to not hold on larger screens

--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,9 +1,11 @@
 .nav {
-  display: block;
   position: fixed;
   top: 0;
   width: 100vw;
   height: 10vh;
+  display: grid;
+  grid-template-rows: repeat(1, minmax(0, 1fr));
+  grid-template-columns: repeat(2, minmax(0, 1fr));
   background-color: #000;
   border-style: solid;
   border-width: 0 0 2px 0;
@@ -12,25 +14,44 @@
 }
 
 .nav-left {
-  float: left;
-  height: 100%;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  justify-self: start;
+  align-self: center;
 }
 
 .nav-right {
-  float: right;
-  margin: auto;
-  height: 100%;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  justify-self: end;
+  align-self: center;
+}
+
+.nav-flex-right {
+  display: flex;
+  align-items: center;
+  margin-right: 2rem;
 }
 
 .nav-wtp-logo {
   display: block;
   height: 3vh;
-  margin: 2rem 0 0 2rem;
+  margin-left: 2rem;
 }
 
 .hamburger-react {
-  margin: 1.5rem 2rem 0 0;
   color: #fff;
+}
+
+.user-icon {
+  height: 1.5rem;
+  margin-right: 1.2rem;
+  transition: transform .3s ease-in-out;
+}
+
+.user-icon:hover {
+  transform: scale(1.3);
+  cursor: pointer;
 }
 
 .side-nav {
